# e57Extract

./: BUILD  CMakeLists.txt  README.md
aux_/: libe57-foundation.patch
aux_/E57SimpleImpl-src-1.1.312_fixed/: SConstruct
aux_/E57SimpleImpl-src-1.1.312_fixed/include/: E57Simple.h
aux_/E57SimpleImpl-src-1.1.312_fixed/src/refimpl/: E57Simple.cpp
cmake/modules/: FindE57Ref.cmake  FindE57Simple.cmake  FindEigen.cmake  FindXerces.cmake
e57_metadata/: archive_types.def  compiler.hpp  data_types.cpp  data_types.hpp  e57_metadata.cpp  e57_metadata.hpp  extractor.cpp  extractor.hpp  libe57_serialize.hpp
e57_metadata_wrapper/: Program.cs  e57_metadata_wrapper.cs  e57_metadata_wrapper.csproj
test_cpplib/: main.cpp
